# IDJ-Engine

./: CMakeLists.txt  library.h
include/: Defines.h  Game.h  GameObject.h  InputManager.h  Resources.h  State.h
include/arith/: Circle.h  Rect.h  Vec2.h  Vec2Int.h  Vec3.h  Vec3Int.h
include/components/: BoxCollider.h  Camera.h  CircleCollider.h  Collider.h  Component.h
include/exceptions/: ComponentNotFoundException.h  GameNotStartedException.h
include/physics/: precision.h
include/settings/: Settings.h
include/time/: Time.h
src/: Defines.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Resources.cpp  Resources.h  State.cpp  State.h
src/Time/: Time.cpp  Time.h
src/arith/: Circle.cpp  Rect.cpp  Rect.h  Vec2.cpp  Vec2.h  Vec2Int.cpp  Vec2Int.h  Vec3.cpp  Vec3.h  Vec3Int.cpp  Vec3Int.h
src/components/: BoxCollider.cpp  Camera.cpp  CircleCollider.cpp  Collider.cpp  Collider.h  Collision.cpp  Component.cpp  Component.h
src/exceptions/: ComponentNotFoundException.cpp  GameNotStartedException.cpp  GameNotStartedException.h
src/physics/: Collision.cpp
src/settings/: Setting.txt  Settings.cpp  Settings.h
src/time/: Time.cpp
